# JAProxy

./: .gitignore  .gitmodules  CMakeLists.txt  JAProxy.sln  README.md
JAProxy/: CMakeLists.txt  Client.cpp  Client.h  JAProxy.cpp  JAProxy.vcxproj  JAProxy.vcxproj.filters  JKAListener.cpp  JKAListener.h  Pcap.cpp  Pcap.h  Result.h  Server.cpp  Server.h  ip_helpers.h
